--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div class="container text-white mx-auto">
-    <app-navbar></app-navbar>
-    <app-location-finder (locationNameEmitter)="handleLocationName($event)"></app-location-finder>
-    <app-restaurant-list [list]="restaurantLists" [loader]="loader"></app-restaurant-list>
+<div class="text-white mx-auto theme-light">
+  <app-navbar></app-navbar>
+  <main class="container mx-auto main">
+    <router-outlet></router-outlet>
+  </main>
 </div>
