--- a/src/app/components/resturant-card/resturant-card.component.scss
+++ b/src/app/components/resturant-card/resturant-card.component.scss
@@ -1,11 +1,20 @@
 .restaurant-card {
-    max-width: 300px;
-    min-width: 300px;
-  & > * {
-    transition: all 0.3s ease-out;
+  max-width: 300px;
+  min-width: 300px;
+  transition: all 0.3s ease-out;
+  transform: scale(0.95);
+
+  &:hover, &:focus {
+    transform: scale(1);
+    transition: transform 0.2s linear;
+
   }
 
-  &__header h3{
+  & > * {
+    transition: border 0.3s ease-in-out;
+  }
+
+  &__header h3 {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -18,11 +27,8 @@
   }
 }
 
-
-
-@media (max-width: 900px){
-    .restaurant-card {
-      max-width: 100%;
-      min-width: 100%;
-    }
+@media (max-width: 900px) {
+  .restaurant-card {
+    min-width: 100%;
+  }
 }
