--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,12 @@
 <nav class="relative select-none bg-normal-bg flex justify-between w-full p-2">
-  <div class="flex flex-no-shrink items-stretch h-12">
+  <div class="flex flex-no-shrink items-stretch h-12 header">
     <a
       routerLink=""
       class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-4xl text-orange-700 no-underline flex items-center hover:text-primary"
-      ><fa-icon [icon]="faSeedling" size="sm" class="mr-2"></fa-icon>  Pomato</a
     >
+      <!-- <fa-icon [icon]="faSeedling" size="sm" class="mr-2"></fa-icon> -->
+      Pomato
+    </a>
     <!-- <button class="block lg:hidden cursor-pointer ml-auto relative w-12 h-12 p-4">
             <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
             <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"/></svg>
@@ -15,9 +17,13 @@
       <a
         routerLink="search"
         class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-default no-underline flex items-center hover:text-secondary"
-        ><fa-icon [icon]="faSearch"></fa-icon></a
+        ><fa-icon [icon]="faSearch"></fa-icon
+      ></a>
+      <a
+        (click)="handleDarkMode()"
+        role="button"
+        class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-white no-underline flex items-center hover:bg-grey-dark"
       >
-      <a (click)="handleDarkMode()" role="button" class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-white no-underline flex items-center hover:bg-grey-dark">
         <fa-icon [icon]="faSun" class="text-yellow-500"></fa-icon>
       </a>
     </div>
