Fixed darkmode and added footer links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="text-white mx-auto theme-light">
+<div class=" mx-auto relative min-h-screen">
   <app-navbar></app-navbar>
-  <main class="container mx-auto main">
+  <main class="container mx-auto p-2 w-auto main">
     <router-outlet></router-outlet>
   </main>
+  <app-footer></app-footer>
 </div>
