--- a/src/app/components/location-finder/location-finder.component.html
+++ b/src/app/components/location-finder/location-finder.component.html
@@ -1,5 +1,5 @@
 <form
-  class="flex justify-around align-middle max-w-sm mx-auto my-6 border-2 rounded-lg border-black-500 focus:border-primary"
+  class="flex justify-around align-middle max-w-sm mx-auto my-6 mt-12 border-2 rounded-lg border-black-500 focus:border-primary"
   (ngSubmit)="onSubmit()"
 >
   <input
