--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="relative select-none bg-normal-bg flex justify-between w-full p-2">
+<nav class="relative select-none bg-normal-bg flex justify-between w-full p-2 rounded-b-lg">
   <div class="flex flex-no-shrink items-stretch h-12 header">
     <a
       routerLink=""
