--- a/src/app/components/resturant-card/resturant-card.component.html
+++ b/src/app/components/resturant-card/resturant-card.component.html
@@ -16,7 +16,7 @@
       class="restaurant-card__content h-100 flex flex-col justify-between flex-auto"
     >
       <div class="restaurant-card__header mb-1">
-        <h3 class="text-xl font-bold text-primary capitalize">
+        <h3 class="text-2xl pb-2 text-primary capitalize">
           {{ restaurant.name }}
         </h3>
         <p class="text-sm font-light text-secondary">
