--- a/src/app/components/restaurant-details/restaurant-details.component.html
+++ b/src/app/components/restaurant-details/restaurant-details.component.html
@@ -2,7 +2,7 @@
   class="my-8 p-8  sm:p-8 w-100 border bg-normal-bg flex flex-col border-normal-bg rounded-lg  shadow-2xl"
 >
   <ng-container *ngIf="!loading && !error && restaurant; else spinner">
-    <div class="flex w-100 lg:flex-row flex-col lg:justify-around">
+    <div class="flex w-100 lg:flex-row flex-col text-default lg:justify-around">
       <img
         [src]="coverImage"
         alt=""
@@ -54,7 +54,7 @@
       class="title_rating w-100 lg:px-8 px-0 my-4 order-first lg:order-none border border-normal-bg rounded-lg mx-4 flex lg:flex-row flex-col bg-normal-bg justify-between items-center"
     >
       <div class="restaurant_name flex flex-col">
-        <h3 class="text-2xl font-bold text-primary">{{ restaurant.name }}</h3>
+        <h3 class="text-4xl mb-2  text-primary">{{ restaurant.name }}</h3>
         <div class="locatility flex flex-row text-xs text-default">
           <span>{{ restaurant.location.locality }}</span>
           <span class="mx-4"> &#8284; </span>
@@ -102,7 +102,7 @@
 
 <ng-template #spinner>
   <div
-    class="w-full d-flex flex-col justify-center my-16"
+    class="w-full flex flex-col justify-center my-16"
     *ngIf="loading && !error"
   >
     <app-loader></app-loader>
