--- a/src/tailwind-build.scss
+++ b/src/tailwind-build.scss
@@ -4,7 +4,7 @@
 
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css?family=Pacifico|Quicksand:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Pacifico|Maven+Pro:400,700&display=swap');
 
 :root {
   --primary: #ed8935;
@@ -39,7 +39,7 @@
 
 //colors
 
-body {
+body.theme-dark {
   --primary: #ed8935;
   --secondary: #8e99aa;
   --default: #f6f6f6;
@@ -48,7 +48,7 @@ body {
   background: var(--soft-bg);
 }
 
-body.theme-dark {
+body.theme-light {
   --primary: #ed8935;
   --secondary: #2c2d33;
   --default: #222124;
@@ -58,20 +58,31 @@ body.theme-dark {
 }
 
 html {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Maven Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 @supports (font-variation-settings: normal) {
   html {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Maven Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+      sans-serif;
   }
 }
 
 body {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Maven Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   font-size: 20px;
 }
 
 p {
   color: var(--secondary);
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'Pacifico', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
