fixed alignment issues in restaurant details page

--- a/src/app/components/restaurant-details/restaurant-details.component.html
+++ b/src/app/components/restaurant-details/restaurant-details.component.html
@@ -51,10 +51,10 @@
     </div>
 
     <div
-      class="title_rating w-100 lg:px-8 px-0 my-4 order-first lg:order-none border border-normal-bg rounded-lg mx-4 flex lg:flex-row flex-col bg-normal-bg justify-between items-center"
+      class="title_rating w-100 lg:px-8 px-0 my-4 order-first lg:order-none border border-normal-bg rounded-lg mx-4 flex lg:flex-row flex-col bg-normal-bg justify-between sm:text-center lg:text-left items-center"
     >
       <div class="restaurant_name flex flex-col">
-        <h3 class="text-4xl mb-2  text-primary">{{ restaurant.name }}</h3>
+        <h3 class="text-4xl mb-2 text-center lg:text-left text-primary">{{ restaurant.name }}</h3>
         <div class="locatility flex flex-row text-xs text-default">
           <span>{{ restaurant.location.locality }}</span>
           <span class="mx-4"> &#8284; </span>
